added javascript binding and toolbar

--- a/packages.config
+++ b/packages.config
@@ -4,5 +4,13 @@
   <package id="cef.redist.x86" version="91.1.21" targetFramework="net452" />
   <package id="CefSharp.Common" version="91.1.211" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="91.1.211" targetFramework="net452" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net452" />
+  <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net452" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net452" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net452" />
 </packages>
