--- a/growser-browser/Growser.Browser.csproj
+++ b/growser-browser/Growser.Browser.csproj
@@ -41,6 +41,26 @@
   <PropertyGroup>
     <ApplicationIcon>growser.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CefSharp, Version=91.1.211.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
       <HintPath>packages\CefSharp.Common.91.1.211\lib\net452\CefSharp.dll</HintPath>
@@ -122,6 +142,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="growser.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\growser-live\Growser.Live.csproj">
+      <Project>{2e652f9b-ed99-489d-b508-b480985a7ff9}</Project>
+      <Name>Growser.Live</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\growser-messenger\Growser.Messenger.csproj">
+      <Project>{9c147d4a-5816-4fe0-b4ad-51df2c502b3b}</Project>
+      <Name>Growser.Messenger</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
