--- a/growser-browser/packages.config
+++ b/growser-browser/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net452" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.20210709" targetFramework="net452" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net452" />
